--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,14 @@
         <dependency>
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
-            <version>2.6.2</version>
+            <version>2.12.2</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/xercesImpl-2.6.2.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
         </dependency>
         <dependency>
             <groupId>xml-apis</groupId>
